# dokusei

./: .bazelrc  .gitignore  CMakeLists.txt  WORKSPACE
.github/workflows/: ci.yml
dokusei/: BUILD  CMakeLists.txt  client.cpp  main.cpp  server.cpp
dokusei/src/: main.cpp
grpc/: BUILD  server.h  server_factory.cpp  server_factory.h  tox_service.cpp  tox_service.h
lib/grpc/: CMakeLists.txt
lib/grpc/src/: tox_service.cpp  tox_service.h
lib/platform/: CMakeLists.txt
lib/platform/src/linux/: platform.cpp
lib/proto/: CMakeLists.txt
lib/proto/proto/: tox.proto
lib/toxxx/: CMakeLists.txt
lib/toxxx/src/: tox.cpp
lib/toxxx/test/: CMakeLists.txt
lib/toxxx/test/src/: test_tox.cpp
lib/warning/: CMakeLists.txt
platform/: BUILD  linux.cpp  platform.h  win32.cpp
proto/: BUILD  tox.proto
toxxx/: BUILD  tox.cpp  tox.h
toxxx/test/: test_tox.cpp
